[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Hole.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/happykids.wav" type="AudioStream" id=2]
[ext_resource path="res://Models/holeArrow.tscn" type="PackedScene" id=3]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="CylinderShape" id=2]

[sub_resource type="ParticlesMaterial" id=3]
direction = Vector3( 0, 1, 0 )
spread = 80.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 30.0
color = Color( 0, 0.709804, 0.0196078, 1 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.4, 0.717647, 1, 1 )
metallic = 1.0

[sub_resource type="SphereMesh" id=5]
material = SubResource( 4 )
radius = 0.2
height = 0.2

[node name="Hole" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="HoleBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/HoleBody"]
shape = SubResource( 2 )

[node name="Particles" type="Particles" parent="."]
emitting = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )

[node name="holeArrow" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.90444, 0 )
[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_AudioStreamPlayer3D_finished"]
